<resources>
    <string name="app_name">Calculator App</string>
    <string name="btn_clear">CLEAR</string>
    <string name="awesome_calculator_by_nikos">AwesomeCalculator By Nikos</string>
    <string name="txt_result">0.00</string>
    <string name="btn_delete">⌫</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_plus_minus">±</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="btn_multiply">*</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="btn_divide">÷</string>
    <string name="btn_decimal">.</string>
    <string name="number_zero">0</string>
    <string name="btn_done">=</string>
    <string name="btn_percent">%</string>
</resources>