<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/awesome_calculator_by_nikos"
        android:background="#FF9800"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/main_txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="50dp"
            android:hint="@string/txt_result"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_clear"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_delete"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_seven"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_eight"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_nine"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_plus_minus"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_four"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_five"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/main_btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_six"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_multiply"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_one"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_two"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_three"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_divide"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_btn_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_decimal"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/number_zero"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_done"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main_btn_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#696969"
                android:text="@string/btn_percent"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>